tests/lean/place_eqn.lean.expected.out
place_eqn.lean:4:16: error: don't know how to synthesize placeholder
foo : ℕ → ℕ
⊢ ℕ
place_eqn.lean:5:16: error: don't know how to synthesize placeholder
foo : ℕ → ℕ,
a : ℕ
⊢ ℕ
place_eqn.lean:3:0: error: failed to add declaration 'foo' to environment, value has metavariables
  λ (a : ℕ),
    nat.brec_on a
      (λ (a : ℕ) (b : nat.below a),
         nat.cases_on a (λ (b : nat.below 0), ?M_1) (λ (a : ℕ) (b : nat.below (succ a)), ?M_2) b)
